<resources>
    <string name="app_name">MedicPlus</string>
    <string name="start_text">Start</string>
    <string name="next_text">Next</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="terms_text">By continuing, you agree to out Terms and Conditions.</string>
    <string name="already_account_">Already have an account ? Login</string>
    <string name="already_account">
        <font color="@color/black">Already have an account ?</font>
        <font color="@color/primary">Login</font>
    </string>
    <string name="lets_get_started">Lets get started with creating your account.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete_registration">Complete registration to connect with better impression.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="complete">Complete</string>
    <string name="confirm">Confirm</string>
    <string name="otp_head">Enter the 4 digit we sent to 0772 588 020 </string>
    <string name="otp_resend">Resend code 00:30</string>
    <string name="login_title">Enter your credentials to continue.</string>
    <string name="dont_have_an_account">Don\'t have an account yet? Register</string>
    <string name="let_s_find">Let\'s Find Your Doctor</string>
    <string name="search_hint">Search for a doctor or health issue</string>
    <string name="browse_by_categories">Browse by Categories</string>
    <string name="upcoming_schedules">Upcoming Schedules</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="health_articles">Health Articles</string>
    <string name="see_all">See All</string>
    <string name="see_more">See More</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="navigation_drawer_open">Drawer Open\\</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="update">Update</string>
    <string name="pharmacy">Pharmacy</string>
</resources>