<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        tools:context="com.bms.medicplus.auth.fragments.RegisterFormFragment">

        <include layout="@layout/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:layout_marginHorizontal="@dimen/margin_lg"
            android:paddingVertical="@dimen/padding_md"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="@dimen/fs_h2" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInput"
            style="@style/App.Bms.Inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_marginHorizontal="@dimen/margin_lg"
            android:hint="@string/email_address"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInput"
            style="@style/App.Bms.Inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_marginHorizontal="@dimen/margin_lg"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/App.Bms.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_lg"
            android:layout_marginHorizontal="@dimen/padding_lg"
            android:text="@string/login"
            android:theme="@style/App.Bms.Button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:padding="@dimen/padding_sm"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/black" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>