<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/padding_xl"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_lg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/otp_head" />


    <com.chaos.view.PinView
        android:id="@+id/optCode"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/margin_md"
        android:hint=""
        android:inputType="number"
        android:itemBackground="@color/light"
        android:padding="@dimen/padding_lg"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/primary"
        android:elevation="0dp"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="5"
        app:itemHeight="@dimen/margin_xxl"
        app:itemRadius="4dp"
        app:itemSpacing="@dimen/margin_lg"
        app:itemWidth="@dimen/margin_xxl"
        app:lineColor="@color/primary"
        app:lineWidth="1dp"
        app:viewType="rectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_md"
        android:fontFamily="@font/regular"
        android:text="@string/otp_resend"
        app:layout_constraintTop_toBottomOf="@id/optCode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:padding="@dimen/padding_lg"
        android:layout_marginVertical="@dimen/margin_md" />


</androidx.appcompat.widget.LinearLayoutCompat>